# moving_figures

./: CMakeLists.txt  CMakePresets.json  README  TODO.txt  config.h.in
cmake/: CheckIncludeFileError.cmake
gresource/: CMakeLists.txt  gresource.xml.in
gresource/shaders/: fragment.glsl  vertex.glsl
gui/: CMakeLists.txt  fps.h  gcircle.c  gcircle.h  gfigure.c  gfigure.h  glrenderer.c  glrenderer.h  gpoint.c  gpoint.h  gpolygon.c  gpolygon.h  gstar.c  gstar.h  gtkmovingfiguresarea.c  gtkmovingfiguresarea.h  gui.c  inheritance.txt  moving_figures.c  moving_figures.h  window.c  window.h
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c  mfapplication.c  mfapplication.h  mfcustomfigure.c  mfcustomfigure.h  mfdrawarea.c  mfdrawarea.h  mffigure.c  mffigure.h  mffigureinfo.c  mffigureinfo.h  mflayout.c  mflayout.h  mfmodelasset.c  mfmodelasset.h  mfrender.c  mfrender.h  mfswitchbutton.c  mfswitchbutton.h  mfwindow.c  mfwindow.h
src/resource/: CMakeLists.txt  resource.xml
src/resource/models/: models.ini
src/resource/shaders/: fragment.glsl  vertex.glsl
